reset.css input 테두리 주황색으로 변경

--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -67,3 +67,6 @@ button{background-color: transparent; border: none; cursor: pointer;}
 input[type="submit"]{cursor: pointer;}
 
 input[type="password"]{font-family: Serif}
+
+input:focus, select:focus { outline-color: #ff9900; }
+
