--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -59,7 +59,7 @@
         </nav>
         <ul>
             <li><a href="{% url 'common:mypage' %}" class="login_icon">로그인</a></li>
-            <li><a href="{% url 'common:community_chat' %}" class="mail_icon" data-count="7">메일</a></li>
+            <li><a href="{% url 'common:community_chat' 0 %}" class="mail_icon" data-count="7">메일</a></li>
         </ul>
     </div>
 </header>
