--- a/templates/common/mypage_info.html
+++ b/templates/common/mypage_info.html
@@ -12,7 +12,7 @@
                 <a href="{% url 'common:usedtrade_chat' 0 %}" data-count="3">중고거래</a>
             </li>
             <li>
-                <a href="{% url 'common:community_chat' %}" data-count="3">커뮤니티</a>
+                <a href="{% url 'common:community_chat' 0 %}" data-count="3">커뮤니티</a>
             </li>
             <li>
                 <a href="{% url 'common:service' %}">문의</a>
