--- a/templates/common/mypage_question.html
+++ b/templates/common/mypage_question.html
@@ -9,10 +9,10 @@
                     <a href="{% url 'common:mypage' %}">회원정보</a>
                 </li>
                 <li>
-                    <a href="{% url 'common:usedtrade_chat' %}" data-count="3">중고거래</a>
+                    <a href="{% url 'common:usedtrade_chat' 0 %}" data-count="3">중고거래</a>
                 </li>
                 <li>
-                    <a href="{% url 'common:community_chat' %}" data-count="3">커뮤니티</a>
+                    <a href="{% url 'common:community_chat' 0 %}" data-count="3">커뮤니티</a>
                 </li>
                 <li class="active">
                     <a href="{% url 'common:service' %}">문의</a>
