--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -8,7 +8,7 @@
                     <legend>로그인</legend>
                     <ul>
                         <li>
-                            <input type="text" placeholder="아이디" class="form-control" name="username" id="username"
+                            <input type="text" placeholder="아이디" class="form-control" name="username"
                                    title="userID">
                         </li>
                         <li>
@@ -26,31 +26,6 @@
                     </p>
                 </fieldset>
             </form>
-        </div>
-        <div class="subPage loginPage">
-            <div class="loginArea">
-                <form>
-                    <fieldset>
-                        <legend>로그인</legend>
-                        <ul>
-                            <li>
-                                <input type="text" placeholder="아이디" title="userID">
-                            </li>
-                            <li>
-                                <input type="password" placeholder="비밀번호" title="userPW">
-                            </li>
-                        </ul>
-                        <p>ID에 학교 이메일 또는 Toch ID를 입력하세요.</p>
-                        <input type="submit" value="로그인">
-                        <p>
-                            <mark><a href="{% url 'common:login_find' %}">Toch ID 또는 암호를 잊으셨나요?</a></mark>
-                        </p>
-                        <p>
-                            <mark>Toch ID가 없으신가요?<a href="{% url 'common:signup' %}">지금 생성.</a></mark>
-                        </p>
-                    </fieldset>
-                </form>
-            </div>
         </div>
     </div>
 {% endblock %}
