중고거래 css 깨짐 수정

--- a/templates/usedtrade/index.html
+++ b/templates/usedtrade/index.html
@@ -2,38 +2,38 @@
 {% load static %}
 
 {% block content %}
-    <style>
-        .container {
-            margin: 0 auto;
-        }
+<!--    <style>-->
+<!--        .container {-->
+<!--            margin: 0 auto;-->
+<!--        }-->
 
-        .trade_ul {
-            margin-top: 10px;
-        }
+<!--        .trade_ul {-->
+<!--            margin-top: 10px;-->
+<!--        }-->
 
-        .trade_ul li {
-            float: left;
-            width: 200px;
-            height: 200px;
-            margin: 10px;
-        }
+<!--        .trade_ul li {-->
+<!--            float: left;-->
+<!--            width: 200px;-->
+<!--            height: 200px;-->
+<!--            margin: 10px;-->
+<!--        }-->
 
-        .trade_image {
-            border: 1px solid black;
-            width: 100%;
-            height: 60%;
-        }
+<!--        .trade_image {-->
+<!--            border: 1px solid black;-->
+<!--            width: 100%;-->
+<!--            height: 60%;-->
+<!--        }-->
 
-        .trade_content {
-            width: 100%;
-            height: 10%;
-        }
+<!--        .trade_content {-->
+<!--            width: 100%;-->
+<!--            height: 10%;-->
+<!--        }-->
 
-        .trade_price {
-            width: 100%;
-            height: 30%;
-        }
-    </style>
+<!--        .trade_price {-->
+<!--            width: 100%;-->
+<!--            height: 30%;-->
+<!--        }-->
+<!--    </style>-->
 
     <div class="container">
         <ul class="trade_ul">
