--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -222,7 +222,7 @@
                 }
                 arithmeticMean[post] = sum
             }
-            alert(Object.keys(arithmeticMean).sort( function(a,b){ return arithmeticMean[b]-arithmeticMean[a] }));
+            alert(Object.keys(arithmeticMean).sort((a,b) => { return arithmeticMean[b]-arithmeticMean[a] }));
         }
 
         // JSON 데이터 받아오는 함수
