--- a/templates/usedtrade/index.html
+++ b/templates/usedtrade/index.html
@@ -1,40 +1,5 @@
 {% extends 'base.html' %}
-{% load static %}
-
 {% block content %}
-<!--    <style>-->
-<!--        .container {-->
-<!--            margin: 0 auto;-->
-<!--        }-->
-
-<!--        .trade_ul {-->
-<!--            margin-top: 10px;-->
-<!--        }-->
-
-<!--        .trade_ul li {-->
-<!--            float: left;-->
-<!--            width: 200px;-->
-<!--            height: 200px;-->
-<!--            margin: 10px;-->
-<!--        }-->
-
-<!--        .trade_image {-->
-<!--            border: 1px solid black;-->
-<!--            width: 100%;-->
-<!--            height: 60%;-->
-<!--        }-->
-
-<!--        .trade_content {-->
-<!--            width: 100%;-->
-<!--            height: 10%;-->
-<!--        }-->
-
-<!--        .trade_price {-->
-<!--            width: 100%;-->
-<!--            height: 30%;-->
-<!--        }-->
-<!--    </style>-->
-
     <div class="container">
         <ul class="trade_ul">
             {% for data in data %}
@@ -50,7 +15,6 @@
         </ul>
     </div>
     <div class="container">
-        <button onclick="location.href='{% url 'usedtrade:create_post' %}'" class="btn btn-outline-secondary">글쓰기
-        </button>
+        <button onclick="location.href='{% url 'usedtrade:create_post' %}'" class="btn btn-outline-secondary">글쓰기</button>
     </div>
 {% endblock %}
